# OneCAD-Tauri

./: .gitignore  CURRENT_STATE.md  TODO.md  index.html  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/onecad-core/: Cargo.toml
src-tauri/crates/onecad-core/src/: error.rs  ids.rs  lib.rs  math.rs  selection.rs
src-tauri/crates/onecad-core/src/document/: body.rs  datum.rs  element_index.rs  mod.rs  record.rs  refs.rs  repair.rs  variables.rs
src-tauri/crates/onecad-core/src/edit/: command.rs  mod.rs  outcome.rs  session.rs  undo.rs
src-tauri/crates/onecad-core/src/history/: graph.rs  mod.rs  timeline.rs
src-tauri/crates/onecad-core/src/io/: container.rs  document_io.rs  history_io.rs  manifest.rs  (+4 more)
src-tauri/crates/onecad-core/tests/: container_io.rs  edit_session.rs  history.rs  proptest_roundtrip.proptest-regressions  proptest_roundtrip.rs  regen_executor.rs  regen_planner.rs  regen_scheduler.rs  schema_freeze.rs  sketch_freeze.rs  sketch_schema_alignment.rs
src-tauri/crates/onecad-protocol/: Cargo.toml
src-tauri/crates/onecad-protocol/src/: client.rs  error.rs  framing.rs  lib.rs  mesh.rs  messages.rs
src-tauri/crates/onecad-regen/: Cargo.toml
src-tauri/crates/onecad-regen/src/: main.rs
src-tauri/crates/onecad-regen/tests/: regen_cli.rs
src-tauri/crates/onecad-worker-stub/: Cargo.toml
src-tauri/crates/onecad-worker-stub/src/: main.rs
src-tauri/crates/onecad-worker-stub/tests/: stub_integration.rs
src-tauri/src/: autosave.rs  document_runtime.rs  dto.rs  error.rs  events.rs  export.rs  lib.rs  main.rs  mesh_cache.rs  recents.rs  state.rs
src-tauri/src/api/: mod.rs
src-tauri/src/document_runtime/: tests.rs
src-tauri/src/worker/: manager.rs  mod.rs  wire.rs
src-tauri/tests/: autosave_recovery.rs  breadth_ops.rs  checkpoints.rs  m2_gate.rs  real_worker_smoke.rs  solver_stub.rs  topology_rebind.rs  wire_contract.rs  worker_chaos.rs
worker/: .gitignore  CMakeLists.txt
worker/cmake/: Dependencies.cmake
worker/src/: main.cpp
worker/src/elementmap/: Assignment.cpp  Assignment.h  ElementMapPartition.cpp  ElementMapPartition.h  Ladder.cpp  Ladder.h  Scoring.cpp  Scoring.h
worker/src/io/: Checkpoint.cpp  Checkpoint.h  ExportStep.cpp  ExportStep.h  MeshExport.cpp  MeshExport.h
worker/src/kernel/elementmap/: ElementMap.h
worker/src/kernel/geometry/: EdgeChainer.cpp  EdgeChainer.h
worker/src/kernel/modeling/: FaceExtrudeProfileBuilder.cpp  FaceExtrudeProfileBuilder.h
worker/src/kernel/topology/: CoplanarFacePatch.cpp  CoplanarFacePatch.h  FacePatchResolver.cpp  FacePatchResolver.h  SelectionTopologyResolver.cpp  SelectionTopologyResolver.h  TopologyVisibility.h
worker/src/loop/: AdjacencyGraph.cpp  AdjacencyGraph.h  FaceBuilder.cpp  FaceBuilder.h  LoopDetector.cpp  LoopDetector.h  RegionUtils.cpp  RegionUtils.h
worker/src/modeling/: BooleanMode.h  BooleanOperation.cpp  BooleanOperation.h
worker/src/ops/: BooleanOp.cpp  BooleanOp.h  CancelProgress.h  ExtrudeOp.cpp  ExtrudeOp.h  FilletChamferOp.cpp  FilletChamferOp.h  MirrorOp.cpp  MirrorOp.h  OpCommon.cpp  OpCommon.h  OpTypes.h  PatternOp.cpp  PatternOp.h  RevolveOp.cpp  RevolveOp.h  ShellOp.cpp  ShellOp.h
worker/src/protocol/: Dispatcher.cpp  Dispatcher.h  Envelope.cpp  Envelope.h  Frame.cpp  Frame.h  SolverLane.cpp  SolverLane.h  WorkerSession.h
worker/src/selection/: SelectionTypes.h
worker/src/session/: BodyStore.h  ElementIdentity.cpp  ElementIdentity.h  HistoryHash.h  PlanExecutor.cpp  PlanExecutor.h  ScratchJob.cpp  ScratchJob.h  Session.cpp  Session.h  ShapeMetrics.cpp  ShapeMetrics.h  Signatures.cpp  Signatures.h  SketchStore.h
worker/src/sketch/: ConstraintApplicability.cpp  ConstraintApplicability.h  RegionId.cpp  RegionId.h  Sketch.cpp  Sketch.h  SketchArc.cpp  SketchArc.h  SketchCircle.cpp  SketchCircle.h  SketchConstraint.cpp  SketchConstraint.h  SketchEllipse.cpp  SketchEllipse.h  SketchEntity.cpp  SketchEntity.h  SketchLine.cpp  SketchLine.h  SketchPoint.cpp  SketchPoint.h  SketchTypes.h  WireSketch.cpp  WireSketch.h
worker/src/sketch/constraints/: Constraints.cpp  Constraints.h
worker/src/sketch/solver/: ConstraintSolver.cpp  ConstraintSolver.h  SolverAdapter.cpp  SolverAdapter.h
worker/src/tess/: Mesh1.cpp  Mesh1.h  MeshHandle.cpp  MeshHandle.h  Tessellate.cpp  Tessellate.h
worker/src/util/: Cancel.h  Hashing.cpp  Hashing.h  LittleEndian.h  Log.h  Uuid.h
worker/tests/: CMakeLists.txt  test_concurrent_lanes.cpp  test_executeplan_cancel.cpp  test_executeplan_crash.cpp  test_executeplan_determinism.cpp  test_frame_roundtrip.cpp  test_hashing.cpp  test_m6a_ops.cpp  test_region_id.cpp  test_solver_latest_wins.cpp  test_wp5_mesh1.cpp  test_wp5_partition_history.cpp  test_wp5_plan.cpp  test_wp6_checkpoint.cpp  test_wp6_exportstep.cpp  test_wp6_extrude.cpp  test_wp6_faststode.cpp  test_wp6_ladder.cpp  test_wp6_meshexport.cpp  test_wp6_ops.cpp  test_wp6_split.cpp
worker/tests/fixtures/: bad_verb.ndjson  checkpoint_roundtrip.ndjson  double_executeplan.ndjson  executeplan_deltas.ndjson  executeplan_discard.ndjson  executeplan_fail_step.ndjson  executeplan_fencing.ndjson  executeplan_happy.ndjson  executeplan_linearpattern.ndjson  executeplan_needsrepair.ndjson  executeplan_region_nomatch.ndjson  executeplan_shell.ndjson  export_mesh.ndjson  hello.ndjson  resolve_refs.ndjson  session_reset.ndjson  sketch_conflicting.ndjson  sketch_gesture.ndjson  sketch_latest_wins.ndjson  sketch_regions.ndjson  sketch_unknown_gesture.ndjson  sketch_upsert.ndjson  tessellate_acquire.ndjson
worker/tests/interop/: check_interop.sh
worker/tests/parity/: check_parity.sh  check_terminator.sh
worker/tests/prototypes/: proto_custom_map.cpp  proto_elementmap_rigorous.cpp  proto_face_builder.cpp  proto_loop_detector.cpp  proto_planegcs_integration.cpp  proto_sketch_constraint_applicability.cpp  proto_sketch_constraints.cpp  proto_sketch_fixed_and_move.cpp  proto_sketch_geometry.cpp  proto_sketch_solver.cpp  proto_tnaming.cpp
worker/tools/harness/: CMakeLists.txt  main.cpp
worker/tools/solverbench/: CMakeLists.txt  RESULTS.md  main.cpp
(+259 files in other folders)
