[package]
name = "onecad-protocol"
version = "0.1.0"
description = "OneCAD IPC protocol: OCW1 framing, message enums, MESH1 envelope, client"
edition = "2021"

[features]
# The async client pulls the transport stack. Server-side (worker) users depend
# on this crate without the feature and get only the framing + message types.
client = ["dep:tokio", "dep:tokio-util", "dep:bytes"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# `rt`/`rt-multi-thread`/`macros`/`time` support the crate's own async tests
# (`#[tokio::test]`, deadlines); `io-util`/`sync` are used by the client at run
# time. All are pulled only with the `client` feature.
tokio = { workspace = true, optional = true, features = [
    "io-util",
    "sync",
    "time",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-util = { workspace = true, optional = true, features = ["codec"] }
bytes = { workspace = true, optional = true }
